[package]
name = "gnss-rtk"
version = "0.7.6"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS position solver"
homepage = "https://github.com/rtk-rs/gnss-rtk"
repository = "https://github.com/rtk-rs/gnss-rtk"
keywords = ["timing", "positioning", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"

[features]
default = []

serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde"
]

[dependencies]
log = "0.4"
thiserror = "2"
map_3d = "0.1.5"
polyfit-rs = "0.2"
nalgebra = "0.33"
itertools = "0.14"
gnss-rs = "2.3.5"
nyx-space = "2.0.0"
hifitime = { version = "4.0", features = ["std"] }
anise = { version = "0.5.3", features = ["embed_ephem"] }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
