[package]
name = "gnss-rtk"
version = "0.7.6"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS position solver"
homepage = "https://github.com/rtk-rs/gnss-rtk"
repository = "https://github.com/rtk-rs/gnss-rtk"
keywords = ["timing", "positioning", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"
exclude = [
    "examples_need_update/*",
]

[features]
default = []

# Download precise Orbit files @ build time instead of deploy time.
# Removes required internet on first deployment ever.
embed_ephem = ["anise/embed_ephem"]

serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde"
]

[dev-dependencies]
env_logger = "0.11"
serde_json = "1"

[dependencies]
log = "0.4"
thiserror = "2"
map_3d = "0.1.5"
polyfit-rs = "0.2"
nalgebra = "0.33"
itertools = "0.14"
gnss-rs = "2.3.5"
nyx-space = "2.0.0"
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

anise = { git = "https://github.com/nyx-space/anise", branch = "dep/hifitime-github" }
hifitime = { git = "https://github.com/nyx-space/hifitime", branch = "master", features = ["serde", "std"] }

