[package]
name = "gnss-rtk"
version = "0.7.6"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS position solver"
homepage = "https://github.com/rtk-rs/gnss-rtk"
repository = "https://github.com/rtk-rs/gnss-rtk"
keywords = ["timing", "positioning", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2021"
readme = "README.md"
exclude = [
    "examples_need_update/*",
]

[package.metadata]
msrv = "1.81"

[features]
default = ["embed_ephem"]

# Download precise Orbit files @ build time instead of deploy time.
# Removes required internet on first deployment ever.
embed_ephem = ["anise/embed_ephem"]

serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde"
]

[dev-dependencies]
serde_json = "1"
rstest = "0.25.0"
env_logger = "0.11"

[dependencies]
log = "0.4"
thiserror = "2"
map_3d = "0.1.5"
polyfit-rs = "0.2"
nalgebra = "0.33"
itertools = "0.14"
gnss-rs = "2.4.0"
hifitime = { version = "4.1.0", features = ["serde", "std"] }

anise = { git = "https://github.com/nyx-space/anise", branch = "dep/hifitime-github" }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
